# grundlagen-ki

./: .env  0_basic_api.ipynb  0_piplines.ipynb  1_0_basic_api.ipynb  1_1_basic_api_with_lm_studio.ipynb  1_1_basic_api_with_ollama.ipynb  1_basic_api.ipynb  1_functions.ipynb  2_0_tool_calls.ipynb  2_1_agents_with_tool_calls.ipynb  2_semantic_search.ipynb  2_tool_calls.ipynb  3_semantic_search.ipynb  4_building_an_index_for_rag.ipynb  4_retrival_chroma.ipynb  5_building_an_index_for_rag.ipynb  6_rag_1.ipynb  6_rag_chat.ipynb  LICENSE.txt  install.sh  pyproject.toml  readme.md  requirements.txt
.devcontainer/: devcontainer.json
docs/: city.jpg:Zone.Identifier  index.md  mms.md
langchain/: prompting.ipynb  retrival_1.ipynb  retrival_2.ipynb  retrival_3.ipynb
mcp/: server.py
